@@ -802,6 +802,18 @@ test regexpComp-21.11 {regexp command compiling tests} {
     }
 } {0 {}}
 
+test regexpComp-22.1 {Bug 1810038} {
+    evalInProc {
+	regexp ($|^X)* {}
+    }
+} 1
+
+test regexpComp-22.2 {regexp compile and backrefs, Bug 1857126} {
+    evalInProc {
+	regexp -- {([bc])\1} bb
+    }
+} 1
+
 set i 0
 foreach {str exp result} {
     foo		^foo		1
